# Testing-Agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agent_run.bat  agent_run.sh  clean_cache.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sail_run.bat  sail_run.sh  web_run.bat  web_run.sh
TestFiles/: 1_ParaBank.json  2_RestfulBooker.json
agent/: README.md  agent.py  llm.py  logging_utils.py  memory.py  memory_summarizer.py  prompt_builder.py  test_agent.py  testing.py
agent_interface/: README.md  main.py  requirements.txt  run.bat  run.sh  test_agent_main.py
agent_interface/browser/: browser_context.py
agent_interface/controller/: __init__.py
agent_interface/tests/: dom_tree_parser_test.py  main.py  memory_test.py
agent_interface/utils/: clean_cache.py  integration_bridge.py  testing_agent_integration.py
browser/: browser_context.py  browser_context_README.md  dom_tree_builder.py  dom_tree_builder_README.md  dom_tree_parser.py  dom_tree_parser_README.md
controller/: README.md  browser_controller.py  controller_README.md  testing.py
html/: login_form.html  signup.html  test_browser_controller.html  test_page.html
src/: test_agent.py  test_agent_main.py
src/browser/: browser_context.py  dom_tree_builder.py  (+1 more)
test_cases/: test_cases.json
testcase_builder/: prompt_buildr.py
tests/: browser_controller_test.py  dom_tree_builder_test.py  dom_tree_parser_test.py  instruction_agent_test.py  main.py  memory_test.py
tools/: tools.py
web_interface/: package-lock.json  package.json
(+26 files in other folders)
