[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "testing-agent"
version = "0.1.0"
description = "AI-powered browser test automation agent using OpenRouter LLMs and Playwright"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
testing-agent = "src.test_agent_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
